--- a/atlas/eixos.html
+++ b/atlas/eixos.html
@@ -61,16 +61,16 @@
                                     <a href="team.html">COLABORADORES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#pricing">PERFIL DE DADOS</a>
+                                    <a href="#pricing">PERFIL DE DADOS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#team">TUTORIAL</a>
+                                    <a href="#team">TUTORIAL</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#testimonial">GRUPO DE PESQUISA</a>
+                                    <a href="https://www.ufrgs.br/gpmc/">GRUPO DE PESQUISA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#contact">PUBLICAÇÕES</a>
+                                    <a href="https://www.ufrgs.br/gpmc/papers-in-journals/">PUBLICAÇÕES</a>
                                 </li>
                             </ul>
                         </div>
