--- a/atlas/index.html
+++ b/atlas/index.html
@@ -60,16 +60,16 @@
                   <a href="team.html">COLABORADORES</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#pricing">PERFIL DE DADOS</a>
+                  <a href="#perfil_dados">PERFIL DE DADOS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#team">TUTORIAL</a>
+                  <a href="#tutorial">TUTORIAL</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#testimonial">GRUPO DE PESQUISA</a>
+                  <a href="https://www.ufrgs.br/gpmc/" target="_blank">GRUPO DE PESQUISA</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#contact">PUBLICAÇÕES</a>
+                  <a href="https://www.ufrgs.br/gpmc/papers-in-journals/" target="_blank">PUBLICAÇÕES</a>
                 </li>
                 <li class="nav-item">
                   <a href="index_us.html"><img src="assets/images/icons/icon_en.png" alt=""></a>
@@ -176,7 +176,7 @@
   </section>
 
   <!-- Start header Area -->
-  <section id="hero-area" class="header-area header-ten">
+  <section id="perfil_dados" class="header-area header-ten">
     <!-- Single Slider -->
     <div class="header-inner" style="background-color: #00406F">
       <div class="container">
@@ -221,7 +221,7 @@
   <!--/ End header Area -->
 
   <!--====== VIDEO TWO PART START ======-->
-  <section class="video-area video-two">
+  <section class="video-area video-two" id="tutorial">
     <div class="container">
       <div class="row">
         <div class="col-12">
