--- a/atlas/team.html
+++ b/atlas/team.html
@@ -60,16 +60,16 @@
                                     <a href="team.html">COLABORADORES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#pricing">PERFIL DE DADOS</a>
+                                    <a href="index.html#perfil_dados">PERFIL DE DADOS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#team">TUTORIAL</a>
+                                    <a href="index.html#tutorial">TUTORIAL</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#testimonial">GRUPO DE PESQUISA</a>
+                                    <a href="https://www.ufrgs.br/gpmc/" target="_blank">GRUPO DE PESQUISA</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="page-scroll" href="#contact">PUBLICAÇÕES</a>
+                                    <a href="https://www.ufrgs.br/gpmc/papers-in-journals/" target="_blank">PUBLICAÇÕES</a>
                                 </li>
                             </ul>
                         </div>
@@ -101,7 +101,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content"><br><br>
-                            <h2 class="fw-bold">EQUIPE ATUAL</h2>
+                            <h2 class="fw-bold">EQUIPE</h2>
                             <p>
                                 <!-- Conheça nossos membros. Texto sobre os membros aqui. -->
                             </p>
