--- a/atlas/index_us.html
+++ b/atlas/index_us.html
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index_us.html">
               <img src="assets/images/logo.svg" alt="Logo" />
             </a>
 
@@ -54,22 +54,22 @@
             <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
               <ul class="navbar-nav m-auto">
                 <li class="nav-item">
-                  <a href="index.html">THE PROJECT</a>
+                  <a href="index_us.html">THE PROJECT</a>
                 </li>
                 <li class="nav-item">
                   <a href="team.html">SPONSORS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#pricing">DATA PROFILE</a>
+                  <a href="index_us.html#perfil_dados_us">DATA PROFILE</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#team">TUTORIAL</a>
+                  <a href="index_us.html#tutorial">TUTORIAL</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#testimonial">RESEARCH GROUP</a>
+                  <a href="https://www.ufrgs.br/gpmc/" target="_blank">RESEARCH GROUP</a>
                 </li>
                 <li class="nav-item">
-                  <a class="page-scroll" href="#contact">PUBLICATIONS</a>
+                  <a href="https://www.ufrgs.br/gpmc/papers-in-journals/" target="_blank">PUBLICATIONS</a>
                 </li>
                 <li class="nav-item">
                   <a href="index.html"><img src="assets/images/icons/icon_pt.png" alt=""></a>
@@ -172,7 +172,7 @@
   </section>
 
   <!-- Start header Area -->
-  <section id="hero-area" class="header-area header-ten">
+  <section class="header-area header-ten" id="perfil_dados_us">
     <!-- Single Slider -->
     <div class="header-inner" style="background-color: #00406F">
       <div class="container">
@@ -224,7 +224,7 @@
   <!--/ End header Area -->
 
   <!--====== VIDEO TWO PART START ======-->
-  <section class="video-area video-two">
+  <section class="video-area video-two" id="tutorial">
     <div class="container">
       <div class="row">
         <div class="col-12">
