update loading page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       body {
         margin: 0;
         padding: 0;
+        background-color: #01273C;
       }
 
       h1 {
@@ -38,6 +39,7 @@
 
       h3 {
         font-size: 20px;
+        color: white;
       }
 
       #loader {
@@ -70,9 +72,8 @@
       <div id="progress-bar"></div>
     </div>
     <div id="loader">
-      <h1>Atlas de Oportunidades</h1><br>
-      <h2>Atlas of Opportunities</h2><br><br>
-      <h3>Carregando/Loading...</h3>
+      <img src="logo_atlas.png" alt="Logo Image">
+      <h3 >Carregando/Loading...</h3>
     </div>
     <div id="root"></div>
     <script type="module">
