--- a/index.html
+++ b/index.html
@@ -61,18 +61,19 @@
 
       #progress-bar {
         height: 100%;
-        background-color: #4caf50;
+        background-color: #0A74A6;
         width: 0%;
       }
     </style>
     <title>Atlas of Opportunity - Brazil</title>
   </head>
   <body>
-    <div id="progress-bar-container">
-      <div id="progress-bar"></div>
-    </div>
+
     <div id="loader">
       <img src="logo_atlas.png" alt="Logo Image">
+      <div id="progress-bar-container">
+        <div id="progress-bar"></div>
+      </div>
       <h3 >Carregando/Loading...</h3>
     </div>
     <div id="root"></div>
