--- a/index.html
+++ b/index.html
@@ -44,18 +44,15 @@
 
       #loader {
         display: flex;
-        flex-direction: column; /* Set the main axis to be vertical */
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         height: 100vh;
       }
 
       #progress-bar-container {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 5px;
+        width: 30%;
+        height: 10px;
         background-color: #eee;
       }
 
@@ -74,7 +71,7 @@
       <div id="progress-bar-container">
         <div id="progress-bar"></div>
       </div>
-      <h3 >Carregando/Loading...</h3>
+      <h3>Carregando/Loading...</h3> <!-- Moved the loader text below the image -->
     </div>
     <div id="root"></div>
     <script type="module">
