update progress bar color

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       #progress-bar {
         height: 100%;
-        background-color: #0A74A6;
+        background: linear-gradient(to right, #1DC0A9, #254557);
         width: 0%;
       }
     </style>
